Fixed the font family on the clocks so it doesnt move on mobiles

--- a/src/app/home/tabata/tabata.page.scss
+++ b/src/app/home/tabata/tabata.page.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
 .grid {
   display: flex;
   flex-flow: column;
@@ -9,14 +12,15 @@
 }
 
 .text {
-  font-size: 4rem;
+  font-size: 3rem;
+  font-family: 'Roboto', sans-serif;
 
   @media (min-width: 540px) {
-    font-size: 5rem;
+    font-size: 4rem;
   }
 
   span {
-    font-size: 3rem;
+    font-size: 2rem;
     color: var(--ion-color-medium);
   }
 }
@@ -27,9 +31,8 @@
   @media (min-width: 540px) {
     font-size: 3rem;
   }
-
 }
 
 p {
-  margin: 0
+  margin: 0;
 }
